vezba05/semantic/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body

    6 type: _TYPE

    7 parameter: %empty
    8          | type _ID

    9 body: _LBRACKET variable_list statement_list _RBRACKET

   10 variable_list: %empty
   11              | variable_list variable

   12 variable: vars _SEMICOLON

   13 vars: type _ID
   14     | vars _COMMA _ID

   15 statement_list: %empty
   16               | statement_list statement

   17 statement: compound_statement
   18          | assignment_statement
   19          | if_statement
   20          | return_statement
   21          | do_while

   22 compound_statement: _LBRACKET statement_list _RBRACKET

   23 assignment_statement: assignment num_exp _SEMICOLON

   24 assignment: _ID _ASSIGN
   25           | assignment _ID _ASSIGN

   26 num_exp: exp
   27        | num_exp _AROP exp

   28 exp: literal
   29    | _ID
   30    | _ID _INC
   31    | function_call
   32    | _LPAREN num_exp _RPAREN

   33 literal: _INT_NUMBER
   34        | _UINT_NUMBER

   35 $@2: %empty

   36 function_call: _ID $@2 _LPAREN argument _RPAREN

   37 argument: %empty
   38         | num_exp

   39 if_statement: if_part
   40             | if_part _ELSE statement

   41 if_part: _IF _LPAREN rel_exp _RPAREN statement

   42 do_while: _DO statement _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

   43 rel_exp: num_exp _RELOP num_exp

   44 return_statement: _RETURN num_exp _SEMICOLON
   45                 | _RETURN _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 6
_IF (259) 41
_ELSE (260) 40
_RETURN (261) 44 45
_ID (262) 5 8 13 14 24 25 29 30 36 42
_INT_NUMBER (263) 33
_UINT_NUMBER (264) 34
_LPAREN (265) 5 32 36 41 42
_RPAREN (266) 5 32 36 41 42
_LBRACKET (267) 9 22
_RBRACKET (268) 9 22
_ASSIGN (269) 24 25
_SEMICOLON (270) 12 23 42 44 45
_AROP (271) 27
_RELOP (272) 42 43
_COMMA (273) 14
_INC (274) 30
_DO (275) 42
_WHILE (276) 42
ONLY_IF (277)


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
program (24)
    on left: 1, on right: 0
function_list (25)
    on left: 2 3, on right: 1 3
function (26)
    on left: 5, on right: 2 3
$@1 (27)
    on left: 4, on right: 5
type (28)
    on left: 6, on right: 5 8 13
parameter (29)
    on left: 7 8, on right: 5
body (30)
    on left: 9, on right: 5
variable_list (31)
    on left: 10 11, on right: 9 11
variable (32)
    on left: 12, on right: 11
vars (33)
    on left: 13 14, on right: 12 14
statement_list (34)
    on left: 15 16, on right: 9 16 22
statement (35)
    on left: 17 18 19 20 21, on right: 16 40 41 42
compound_statement (36)
    on left: 22, on right: 17
assignment_statement (37)
    on left: 23, on right: 18
assignment (38)
    on left: 24 25, on right: 23 25
num_exp (39)
    on left: 26 27, on right: 23 27 32 38 43 44
exp (40)
    on left: 28 29 30 31 32, on right: 26 27
literal (41)
    on left: 33 34, on right: 28 42
function_call (42)
    on left: 36, on right: 31
$@2 (43)
    on left: 35, on right: 36
argument (44)
    on left: 37 38, on right: 36
if_statement (45)
    on left: 39 40, on right: 19
if_part (46)
    on left: 41, on right: 39 40
do_while (47)
    on left: 42, on right: 21
rel_exp (48)
    on left: 43, on right: 41
return_statement (49)
    on left: 44 45, on right: 20


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    6 type: _TYPE .

    $default  reduce using rule 6 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: type . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: type _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    5 function: type _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 10


State 10

    5 function: type _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 7 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    8 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    5 function: type _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 14


State 13

    8 parameter: type _ID .

    $default  reduce using rule 8 (parameter)


State 14

    5 function: type _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 15

    body  go to state 16


State 15

    9 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 10 (variable_list)

    variable_list  go to state 17


State 16

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 17

    9 body: _LBRACKET variable_list . statement_list _RBRACKET
   11 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 15 (statement_list)

    type            go to state 18
    variable        go to state 19
    vars            go to state 20
    statement_list  go to state 21


State 18

   13 vars: type . _ID

    _ID  shift, and go to state 22


State 19

   11 variable_list: variable_list variable .

    $default  reduce using rule 11 (variable_list)


State 20

   12 variable: vars . _SEMICOLON
   14 vars: vars . _COMMA _ID

    _SEMICOLON  shift, and go to state 23
    _COMMA      shift, and go to state 24


State 21

    9 body: _LBRACKET variable_list statement_list . _RBRACKET
   16 statement_list: statement_list . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 29
    _DO        shift, and go to state 30

    statement             go to state 31
    compound_statement    go to state 32
    assignment_statement  go to state 33
    assignment            go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    do_while              go to state 37
    return_statement      go to state 38


State 22

   13 vars: type _ID .

    $default  reduce using rule 13 (vars)


State 23

   12 variable: vars _SEMICOLON .

    $default  reduce using rule 12 (variable)


State 24

   14 vars: vars _COMMA . _ID

    _ID  shift, and go to state 39


State 25

   41 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 40


State 26

   44 return_statement: _RETURN . num_exp _SEMICOLON
   45                 | _RETURN . _SEMICOLON

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44
    _SEMICOLON    shift, and go to state 45

    num_exp        go to state 46
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 27

   24 assignment: _ID . _ASSIGN

    _ASSIGN  shift, and go to state 50


State 28

   22 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 15 (statement_list)

    statement_list  go to state 51


State 29

    9 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 9 (body)


State 30

   42 do_while: _DO . statement _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _DO        shift, and go to state 30

    statement             go to state 52
    compound_statement    go to state 32
    assignment_statement  go to state 33
    assignment            go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    do_while              go to state 37
    return_statement      go to state 38


State 31

   16 statement_list: statement_list statement .

    $default  reduce using rule 16 (statement_list)


State 32

   17 statement: compound_statement .

    $default  reduce using rule 17 (statement)


State 33

   18 statement: assignment_statement .

    $default  reduce using rule 18 (statement)


State 34

   23 assignment_statement: assignment . num_exp _SEMICOLON
   25 assignment: assignment . _ID _ASSIGN

    _ID           shift, and go to state 53
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 54
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 35

   19 statement: if_statement .

    $default  reduce using rule 19 (statement)


State 36

   39 if_statement: if_part .
   40             | if_part . _ELSE statement

    _ELSE  shift, and go to state 55

    $default  reduce using rule 39 (if_statement)


State 37

   21 statement: do_while .

    $default  reduce using rule 21 (statement)


State 38

   20 statement: return_statement .

    $default  reduce using rule 20 (statement)


State 39

   14 vars: vars _COMMA _ID .

    $default  reduce using rule 14 (vars)


State 40

   41 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 56
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    rel_exp        go to state 57


State 41

   29 exp: _ID .
   30    | _ID . _INC
   36 function_call: _ID . $@2 _LPAREN argument _RPAREN

    _INC  shift, and go to state 58

    _LPAREN   reduce using rule 35 ($@2)
    $default  reduce using rule 29 (exp)

    $@2  go to state 59


State 42

   33 literal: _INT_NUMBER .

    $default  reduce using rule 33 (literal)


State 43

   34 literal: _UINT_NUMBER .

    $default  reduce using rule 34 (literal)


State 44

   32 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 60
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 45

   45 return_statement: _RETURN _SEMICOLON .

    $default  reduce using rule 45 (return_statement)


State 46

   27 num_exp: num_exp . _AROP exp
   44 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 61
    _AROP       shift, and go to state 62


State 47

   26 num_exp: exp .

    $default  reduce using rule 26 (num_exp)


State 48

   28 exp: literal .

    $default  reduce using rule 28 (exp)


State 49

   31 exp: function_call .

    $default  reduce using rule 31 (exp)


State 50

   24 assignment: _ID _ASSIGN .

    $default  reduce using rule 24 (assignment)


State 51

   16 statement_list: statement_list . statement
   22 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 63
    _DO        shift, and go to state 30

    statement             go to state 31
    compound_statement    go to state 32
    assignment_statement  go to state 33
    assignment            go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    do_while              go to state 37
    return_statement      go to state 38


State 52

   42 do_while: _DO statement . _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

    _WHILE  shift, and go to state 64


State 53

   25 assignment: assignment _ID . _ASSIGN
   29 exp: _ID .
   30    | _ID . _INC
   36 function_call: _ID . $@2 _LPAREN argument _RPAREN

    _ASSIGN  shift, and go to state 65
    _INC     shift, and go to state 58

    _LPAREN   reduce using rule 35 ($@2)
    $default  reduce using rule 29 (exp)

    $@2  go to state 59


State 54

   23 assignment_statement: assignment num_exp . _SEMICOLON
   27 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 66
    _AROP       shift, and go to state 62


State 55

   40 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _DO        shift, and go to state 30

    statement             go to state 67
    compound_statement    go to state 32
    assignment_statement  go to state 33
    assignment            go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    do_while              go to state 37
    return_statement      go to state 38


State 56

   27 num_exp: num_exp . _AROP exp
   43 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 62
    _RELOP  shift, and go to state 68


State 57

   41 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 69


State 58

   30 exp: _ID _INC .

    $default  reduce using rule 30 (exp)


State 59

   36 function_call: _ID $@2 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 70


State 60

   27 num_exp: num_exp . _AROP exp
   32 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 71
    _AROP    shift, and go to state 62


State 61

   44 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 44 (return_statement)


State 62

   27 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    exp            go to state 72
    literal        go to state 48
    function_call  go to state 49


State 63

   22 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 22 (compound_statement)


State 64

   42 do_while: _DO statement _WHILE . _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 73


State 65

   25 assignment: assignment _ID _ASSIGN .

    $default  reduce using rule 25 (assignment)


State 66

   23 assignment_statement: assignment num_exp _SEMICOLON .

    $default  reduce using rule 23 (assignment_statement)


State 67

   40 if_statement: if_part _ELSE statement .

    $default  reduce using rule 40 (if_statement)


State 68

   43 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 74
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 69

   41 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _DO        shift, and go to state 30

    statement             go to state 75
    compound_statement    go to state 32
    assignment_statement  go to state 33
    assignment            go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    do_while              go to state 37
    return_statement      go to state 38


State 70

   36 function_call: _ID $@2 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    $default  reduce using rule 37 (argument)

    num_exp        go to state 76
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    argument       go to state 77


State 71

   32 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 32 (exp)


State 72

   27 num_exp: num_exp _AROP exp .

    $default  reduce using rule 27 (num_exp)


State 73

   42 do_while: _DO statement _WHILE _LPAREN . _ID _RELOP literal _RPAREN _SEMICOLON

    _ID  shift, and go to state 78


State 74

   27 num_exp: num_exp . _AROP exp
   43 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 62

    $default  reduce using rule 43 (rel_exp)


State 75

   41 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 41 (if_part)


State 76

   27 num_exp: num_exp . _AROP exp
   38 argument: num_exp .

    _AROP  shift, and go to state 62

    $default  reduce using rule 38 (argument)


State 77

   36 function_call: _ID $@2 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 79


State 78

   42 do_while: _DO statement _WHILE _LPAREN _ID . _RELOP literal _RPAREN _SEMICOLON

    _RELOP  shift, and go to state 80


State 79

   36 function_call: _ID $@2 _LPAREN argument _RPAREN .

    $default  reduce using rule 36 (function_call)


State 80

   42 do_while: _DO statement _WHILE _LPAREN _ID _RELOP . literal _RPAREN _SEMICOLON

    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43

    literal  go to state 81


State 81

   42 do_while: _DO statement _WHILE _LPAREN _ID _RELOP literal . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 82


State 82

   42 do_while: _DO statement _WHILE _LPAREN _ID _RELOP literal _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 83


State 83

   42 do_while: _DO statement _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON .

    $default  reduce using rule 42 (do_while)
